--- a/new/index.html
+++ b/new/index.html
@@ -434,7 +434,8 @@
 
                 <link rel="stylesheet" type="text/css" href="./Cats-warriors _ Зов Племен_files/spoiler_banner.css">
 
-                <script type="text/javascript" src="./Cats-warriors _ Зов Племен_files/13109.js"></script>
+<!--                снежинки -->
+<!--                <script type="text/javascript" src="./Cats-warriors _ Зов Племен_files/13109.js"></script>-->
             </div>
 
             <div id="pun-title" class="section">
