header src file structure is created. Added initial styles

--- a/new/index.html
+++ b/new/index.html
@@ -2,7 +2,7 @@
 <!-- saved from url=(0021)http://cwklk.mybb.ru/ -->
 <html xmlns="http://www.w3.org/1999/xhtml" xml:lang="ru" lang="ru" dir="ltr"><head><meta http-equiv="Content-Type" content="text/html; charset=windows-1251">
 
-    <title>Cats-warriors | Зов Племен</title>
+    <title>Зов Племен</title>
 <!--    <script type="text/javascript">-->
 <!--        try{self.document.location.hostname==parent.document.location.hostname&&self.window!=parent.window&&self.parent.window!=parent.parent.window&&document.write('</he'+'ad><bo'+'dy style="display:none"><plaintext>')}catch(e){}-->
 <!--        try{if(top===self&&location.hostname.match(/^www\./))location.href=document.URL.replace(/\/\/www\./,'//')}catch(e){}-->
@@ -443,7 +443,7 @@
                     <tbody id="title-logo-tbody">
                     <tr id="title-logo-tr">
                         <td id="title-logo-tdl" class="title-logo-tdl">
-                            <h1 class="title-logo"><span>Cats-warriors | Зов Племен</span></h1>
+                            <h1 class="title-logo"><span>Зов Племен</span></h1>
                         </td>
                         <td id="title-logo-tdr" class="title-logo-tdr"><!-- banner_top --></td>
                     </tr>
