implemented basic menu reveal

--- a/new/index.html
+++ b/new/index.html
@@ -1798,6 +1798,10 @@
                             display: none;
                         }
                     </style>
+
+<!--                    gleb: добавим скрипт для менюшки-->
+                    <script src="style.js"></script>
+
                     <!--КОНЕЦ--></div>
             </div>
 
